14 September 2010: Wouter
	- increased mesh-max-activation from 1000 to 3000 for crazy domains
	  like _tcp.slb.com with 262 servers.
	- iana portlist updated.

13 September 2010: Wouter
	- bug#327: Fix for cannot access stub zones until the root is primed.

9 September 2010: Wouter
	- unresponsive servers are not completely blacklisted (because of
	  firewalls), but also not probed all the time (because of the request
	  list size it generates).  The probe rate is 1%.
	- iana portlist updated.

20 August 2010: Wouter
	- openbsd-lint fixes: acl_list_get_mem used if debug-alloc enabled.
	  iterator get_mem includes priv_get_mem.  delegpt nodup removed.
	  listen_pushback, query_info_allocqname, write_socket, send_packet,
	  comm_point_set_cb_arg and listen_resume removed.

19 August 2010: Wouter
	- Fix bug#321: resolution of rs.ripe.net artifacts with 0x20.
	  Delegpt structures checked for duplicates always.
	  No more nameserver lookups generated when depth is full anyway.
	- example.conf notes how to do DNSSEC validation and track the root.
	- iana portlist updated.

18 August 2010: Wouter
	- Fix bug#322: configure does not respect CFLAGS on Solaris.
	  Pass CFLAGS="-xO4 -xtarget=generic" on the configure command line
	  if use sun-cc, but some systems need different flags.

16 August 2010: Wouter
	- Fix acx_nlnetlabs.m4 configure output for autoconf-2.66 AS_TR_CPP
	  changes, uses m4_bpatsubst now.
	- make test (or make check) should be more portable and run the unit 
	  test and testbound scripts. (make longtest has special requirements).

13 August 2010: Wouter
	- More pleasant remote control command parsing.
	- documentation added for return values reported by doxygen 1.7.1.
	- iana portlist updated.

9 August 2010: Wouter
	- Fix name of rrset printed that failed validation.

5 August 2010: Wouter
	- Return NXDOMAIN after chain of CNAMEs ends at name-not-found.

4 August 2010: Wouter
	- Fix validation in case a trust anchor enters into a zone with